# my_llm_api

./: .gitignore  AGENTS.md  Makefile  README.md  config.yaml.example  configOpenclaw.md  patch.diff  pyproject.toml
.github/workflows/: ci.yml
.history/: .gitignore_20260322214853
docs/ci/: task14_15_kickoff.md
docs/superpowers/plans/: 2026-03-22-llm-api-proxy.md
scripts/: bootstrap_env.sh  ci_kickoff.sh  e2e_test.sh  install_dependencies.sh  run_tests.sh  verify_and_report.sh
src/: __init__.py
src/adapters/: __init__.py  base.py  gemini.py  openai.py  qwen.py  zhipu.py
src/api/: __init__.py  main.py  routes.py
src/core/: __init__.py  config.py  health.py  logging.py  router.py
src/schemas/: requests.py
tests/: __init__.py  conftest.py  health_test.py  test_api.py  test_basic.py  test_config.py  test_health.py  test_logging.py  test_repo_files.py
tests/adapters/: __init__.py  test_gemini.py  test_openai.py  test_qwen.py  test_zhipu.py
tests/integration/: test_end_to_end.py
